# operations-research-library

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  benchmark.py  mkdocs.yml  notes.org  pyproject.toml
data/complex_distributed_flow_shop/: 10.txt  100.txt  101.txt  102.txt  107.txt  108.txt  112.txt  115.txt  118.txt  12.txt  121.txt  123.txt  126.txt  127.txt  13.txt  135.txt  137.txt  138.txt  139.txt  141.txt  145.txt  146.txt  147.txt  151.txt  155.txt  156.txt  157.txt  159.txt  160.txt  162.txt  163.txt  164.txt  167.txt  171.txt  172.txt  176.txt  177.txt  179.txt  180.txt  181.txt  (+261 more)
data/distributed_flow_shop/: 1.txt  103.txt  104.txt  105.txt  106.txt  109.txt  11.txt  110.txt  111.txt  113.txt  114.txt  116.txt  117.txt  119.txt  120.txt  122.txt  124.txt  125.txt  128.txt  129.txt  130.txt  131.txt  132.txt  133.txt  134.txt  136.txt  14.txt  140.txt  142.txt  143.txt  144.txt  148.txt  149.txt  15.txt  150.txt  152.txt  153.txt  154.txt  158.txt  16.txt  (+259 more)
data/flow_shop/: 0.txt  1.txt  102.txt  113.txt  115.txt  116.txt  117.txt  119.txt  120.txt  121.txt  122.txt  129.txt  131.txt  133.txt  136.txt  137.txt  138.txt  14.txt  141.txt  144.txt  146.txt  147.txt  149.txt  151.txt  152.txt  153.txt  154.txt  155.txt  157.txt  159.txt  16.txt  163.txt  164.txt  166.txt  167.txt  168.txt  17.txt  170.txt  172.txt  176.txt  (+128 more)
data/hybrid_flow_shop/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+1401 more)
data/parallel_machines/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  (+1389 more)
docs/: about.md  coloring.md  index.md  models.md  notes.md  vrptw.md
results/: Analytics.py
scheduling/: LICENSE  ProblemData.py  distributed_permutation_flow_shop.py  flexible_job_shop.py  hybrid_flow_shop.py  job_shop.py  open_shop.py  permutation_flow_shop.py
src/: Instance.py  ProblemData.py  constants.py  datareading.py  main.py  modelCplexCP.py  modelCplexMIP.py  modelGoogleCP.py  modelGoogleMIP.py  models.py
(+1250 files in other folders)
