[tool.poetry]
name = "OR-Library"
version = "0.1.0"
description = "Operations research library of models and algorithms."
authors = ["l-lan <l.lan@vu.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "scheduling" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^7.4.2"


[tool.poetry.group.scheduling]
optional = true

[tool.poetry.group.scheduling.dependencies]
docplex = "^2.25.236"
gurobipy = "^10.0.1"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
python-markdown-math = "^0.8"
pygments = "^2.15.1"
mkdocs-material = "^9.1.14"
mkdocs-material-extensions = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79


[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "E741",  # ambiguous variable name, needed for indexing
    "C901",  # too complex
]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"benchmark.py" = ["E402", "B905"]
